--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         solving algorithmic problems.
       </p>
       <h2 id="technical-skills-">Technical Skills:</h2>
-      <ul>
+      <ul style="font-size: 14px">
         <li>
           <strong>Tools and Technologies:</strong> Pygame, Version Control,
           Linux, Github, LaTeX
@@ -60,7 +60,7 @@
       </ul>
 
       <h2 id="personal-projects-">Personal Projects:</h2>
-      <ul>
+      <ul style="font-size: 14px">
         <li>
           <strong>Sorting Visualizer:</strong>
           <a
@@ -115,7 +115,7 @@
         </li>
       </ul>
       <h2 id="soical-links-">Soical Links:</h2>
-      <ul>
+      <ul style="font-size: 14px">
         <li>
           <strong>Github</strong>:
           <a href="https://github.com/ShowmickKar"
