--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
-  <body style="background-color: cornflowerblue">
+  <body style="background-color: white">
+    <!-- <img style="width: 100px" src="./Assets/self.jpg" /> -->
     <div class="head">
       <h1>Showmick Kar</h1>
-      <!-- <h4>A PROGRAMMING ENTHUSIAST</h4> -->
+      <h4>
+        A PROGRAMMING ENTHUSIAST,<br />Interested in solving algorithmic puzzles
+        and AI in games
+      </h4>
     </div>
     <div class="icon-bar">
       <a
@@ -46,7 +50,7 @@
         solving algorithmic problems.
       </p>
       <h2 id="technical-skills-">Technical Skills:</h2>
-      <ul style="font-size: 14px">
+      <ul>
         <li>
           <strong>Tools and Technologies:</strong> Pygame, Version Control,
           Linux, Github, LaTeX
@@ -60,7 +64,7 @@
       </ul>
 
       <h2 id="personal-projects-">Personal Projects:</h2>
-      <ul style="font-size: 14px">
+      <ul>
         <li>
           <strong>Sorting Visualizer:</strong>
           <a
@@ -115,7 +119,7 @@
         </li>
       </ul>
       <h2 id="soical-links-">Soical Links:</h2>
-      <ul style="font-size: 14px">
+      <ul>
         <li>
           <strong>Github</strong>:
           <a href="https://github.com/ShowmickKar"
