--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       <img src="Assets/self.jpg" style="width: 100px; margin-left: 50px" />
     </div> -->
     <div class="info">
-      <h2 id="welcome-">Welcome:</h2>
+      <h2 id="welcome-">About Me:</h2>
       <p>
-        Hello, I&#39;m <strong>Showmick Kar</strong>. I am a Freshmen Computer
-        Science major at Brac University. I am a programming enthusiast and love
-        to spend my free time making small games, learning new algorithms and
-        solving algorithmic problems.
+        Hi there! I&#39;m <strong>Showmick Kar</strong>. I am a Freshmen
+        Computer Science major at Brac University. I am a programming enthusiast
+        and love to spend my free time making small games, learning new
+        algorithms and solving algorithmic problems.
       </p>
       <h2 id="technical-skills-">Technical Skills:</h2>
       <ul>
