--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <div class="head">
       <h1>Showmick Kar</h1>
       <h4>
-        A PROGRAMMING ENTHUSIAST,<br />Interested in solving algorithmic puzzles
-        and AI in games
+        A PROGRAMMING ENTHUSIAST,<br />Interested in Algorithm Design and
+        <br />
+        AI in games
       </h4>
     </div>
     <div class="icon-bar">
