--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="head">
       <h1>Showmick Kar</h1>
       <h4>
-        A PROGRAMMING ENTHUSIAST,<br />Interested in Algorithm Design and
+        A PROGRAMMING ENTHUSIAST,<br />Interested in Design and Analysis of
+        Algorithms and
         <br />
         AI in games
       </h4>
