--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <h1>Showmick Kar</h1>
       <h4>
         A PROGRAMMING ENTHUSIAST,<br />Interested in Design and Analysis of
-        Algorithms and
+        Algorithms
         <br />
-        AI in games
+        and, AI in games
       </h4>
     </div>
     <div class="icon-bar">
