Added a new personal Project

--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
           >
         </li>
         <li>
+          <strong>Space Shooting Game(Double Player):</strong>
+          <a
+            href="https://github.com/ShowmickKar/Space-Shooting-Game-Double-Player"
+            target="_blank"
+            >https://github.com/ShowmickKar/Space-Shooting-Game-Double-Player</a
+          >
+        </li>
+        <li>
           <strong>Leetcode Solutions:</strong>
           <a
             href="https://github.com/ShowmickKar/Leetcode-Solutions"
