--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
         <br />
         and, AI in games
       </h4>
+      <h4>
+        <strong>Email: </strong
+        ><a href="showmick12@gmail.com">showmick12@gmail.com</a>
+      </h4>
     </div>
+    <!-- <h4></h4> -->
     <div class="icon-bar">
       <a
         href="https://www.facebook.com/metallicapagla/"
