--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
             <h2>Publications</h2>
             <div class="publication-item">
                 <i class="fas fa-file-alt"></i>
-                <p>S.M. Abrar Mustakin Taki, Showmick Kar, Soumik Deb Niloy, Mazharul Islam Rakib, Abdul Al Nahid Biswas. "Mitigation of hallucination and interpretations of self attention of Mistral 7B AI to analyze and visualize context understanding ability of large language models." Undergraduate Thesis, BRAC University, 2024. Thesis Advisor: Dr. Farig Yousuf Sadeque. Available at: <a href="http://hdl.handle.net/10361/22762">http://hdl.handle.net/10361/22762</a></p>
+                <p>S.M. Abrar Mustakin Taki, <strong>Showmick Kar</strong>, Soumik Deb Niloy, Mazharul Islam Rakib, Abdul Al Nahid Biswas. "<strong>Mitigation of hallucination and interpretations of self attention of Mistral 7B AI to analyze and visualize context understanding ability of large language models.</strong>" Undergraduate Thesis, BRAC University, 2024. Thesis Advisor: <strong>Dr. Farig Yousuf Sadeque</strong>. Available at: <a href="http://hdl.handle.net/10361/22762">http://hdl.handle.net/10361/22762</a></p>
             </div>
             <div class="publication-item">
                 <i class="fas fa-file-alt"></i>
-                <p>Maidul Islam, Mohammad Sadman Tahsin, Farjana Alam, Sadab Sifar Hossain, Arnob Deb, Showmick Kar. "Understanding Convolutional Neural Network’s behavior for Alzheimer’s disease on MRI." 2022 IEEE 13th Annual Information Technology, Electronics and Mobile Communication Conference (IEMCON). DOI: <a href="https://doi.org/10.1109/IEMCON56893.2022.9946529">https://doi.org/10.1109/IEMCON56893.2022.9946529</a></p>
+                <p>Maidul Islam, Mohammad Sadman Tahsin, Farjana Alam, Sadab Sifar Hossain, Arnob Deb, <strong>Showmick Kar</strong>. "<strong>Understanding Convolutional Neural Network’s behavior for Alzheimer’s disease on MRI.</strong>" 2022 IEEE 13th Annual Information Technology, Electronics and Mobile Communication Conference (IEMCON). DOI: <a href="https://doi.org/10.1109/IEMCON56893.2022.9946529">https://doi.org/10.1109/IEMCON56893.2022.9946529</a></p>
             </div>
         </section>
 
